--- a/web.config
+++ b/web.config
@@ -27,7 +27,7 @@
     <add name="gtaConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=hspmCall;Integrated Security= True" providerName="System.Data.SqlClient"/>
  -->
     <!--   -->
-    <add name="gtaConnectionString" connectionString="Data Source=hspmins17a;database=hspmCall; Persist Security Info=True;user id=hspmApp;password=SoundG@rden=1" providerName="System.Data.SqlClient"/>
+    <add name="gtaConnectionString" connectionString="Data Source=hspmins18;database=hspmCall; Persist Security Info=True;user id=hspmApp;password=SoundG@rden=1" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpRuntime maxRequestLength="20000" executionTimeout="3000"/>
